--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <title>Bogu test page</title>
 </head>
 <body>
-<div style="position: absolute; bottom: 5px; right: 5px; background-color: red; color: white;">Only for testing component, not part of production build!</div>
+<div style="position: fixed; bottom: 5px; right: 5px; background-color: red; color: white;">Only for testing component, not part of production build!</div>
 <div id="app"></div>
 <script src="bundle.js"></script>
 </body>
