NRP-1491 moved events component to component library

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,9 @@
   <title>Bogu test page</title>
 </head>
 <body>
-<div style="position: fixed; bottom: 5px; right: 5px; background-color: red; color: white;">Only for testing component, not part of production build!</div>
+<div style="position: fixed; bottom: 0px; width: 100%; text-align: center; z-index: 9999; height: 20px; vertical-align: middle; right: 0px; background-color: red; color: white;">
+  Only for testing component, not part of production build!
+</div>
 <div id="app"></div>
 <script src="bundle.js"></script>
 </body>
